# REmatch-web

./: .gitignore  .gitmodules  CMakeLists.txt  CNAME  LICENSE  README.md  arb.txt  asd.md  asd.text  asd.txt  asset-manifest.json  emscripten_binding.js  index.html  nih.txt  package-lock.json  package.json  precache-manifest.146b850acb02f76b3189566fa74c775f.js  rematch_wasm.js  service-worker.js  work.js
.github/workflows/: main.yml
public/: emscripten_binding.js  index.html  liteWork.js  rematch_wasm.js  rematch_wasm.wasm  work.js
src/: App.css  App.css.map  App.js  App.scss  index.css  index.js  scrollbar.css
src/codemirror-extensions/: MarkExtension.js  REQLExtension.js
src/components/: About.jsx  Advanced.jsx  Beginner.jsx  CollapsibleTable.jsx  CustomToolbar.jsx  Examples.jsx  ExamplesDialog.jsx  FileDialog.jsx  FileUploadingPrev.jsx  Home.jsx  MUIWrapper.jsx  Markdown.jsx  MarkdownPage.jsx  MatchesTable.jsx  Navbar.jsx  ResizableGridWindow.jsx  Tutorial.jsx  TutorialStepper.jsx  Uploading.jsx  Viewer.jsx  Window.jsx
src/mui/: themes.js
src/pages/: AboutUs.jsx  Documentation.jsx  Examples.jsx  Home.jsx  NotFound.jsx  Tutorial.jsx  WhatIsREmatch.jsx
src/text/: english.jsx
src/utils/: REQLCodemirrorLanguage.js  localStorage.js  utf8IndexToJavascriptIndex.js  utf8Substring.js
static/css/: 1.c027952a.chunk.css  1.c027952a.chunk.css.map  2.2b9f74d8.chunk.css  2.2b9f74d8.chunk.css.map  2.551f462b.chunk.css  2.551f462b.chunk.css.map  2.8bdf4624.chunk.css  2.8bdf4624.chunk.css.map  main.0d088809.css  main.0d088809.css.map  (+48 more)
tests/: chunkdoc.js
(+81 files in other folders)
